--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
   <!-- Icons -->
   <script src="https://kit.fontawesome.com/8d1e499f46.js" crossorigin="anonymous"></script>
 
-  <title>StartUp - Dario</title>
+  <!-- Flavicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <title>MatSci Home Page</title>
 </head>
 
 <body>
