--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
     <div class="container-fluid">
 
-
       <!-- NavBar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">MatSci</a>
@@ -138,7 +137,7 @@
     <section id="press">
       <div class="container-fluid">
         <img class="press-image" src="images/techint.png" alt="avatar-image">
-        <img class="press-image" src="images/ypf.png" alt="avatar-image">
+        <img class="press-image" src="images/YPF.png" alt="avatar-image">
         <img class="press-image" src="images/cti.png" alt="avatar-image">
       </div>
     </section>
@@ -194,6 +193,20 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <section id="action-call">
+      <h2 class="call-to-action">Start your company's journey now!</h2>
+      <button type="button" class="btn btn-dark btn-bg download-button"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-light btn-bg download-button"><i class="fab fa-google-play"></i> Download</button>
+  </section>
+
+  <section id="footer">
+    <i class="footer-icon fab fa-twitter"></i>
+    <i class="footer-icon fab fa-facebook-f"></i>
+    <i class="footer-icon fab fa-instagram"></i>
+    <i class="footer-icon fas fa-envelope"></i>
+    <p>© Copyright 2020 MatSci</p>
   </section>
 </body>
 
