--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Download</a>
+              <a class="nav-link" href="#action-call">Download</a>
             </li>
           </ul>
         </div>
@@ -65,7 +65,7 @@
       <!-- title -->
       <div class="row">
         <div class="col-lg-7">
-          <h1>Engineering at the tip of your finger.</h1>
+          <h1 class="big-heading">Engineering at the tip of your finger.</h1>
           <button type="button" class="btn btn-dark btn-bg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-bg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -85,17 +85,17 @@
       <div class="row">
         <div class="col-lg-4">
           <i class="fas fa-check-circle fa-2x feature-icon"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feature-title">Easy to use.</h3>
           <p class="feature-description">Lorem ipsum dolor sit amet, consectetur.</p>
         </div>
         <div class="col-lg-4">
           <i class="fas fa-bullseye fa-2x feature-icon"></i>
-          <h3>Elite clientele.</h3>
+          <h3 class="feature-title">Elite clientele.</h3>
           <p class="feature-description">Lorem ipsum dolor sit amet, consectetut.</p>
         </div>
         <div class="col-lg-4">
           <i class="fas fa-award fa-2x feature-icon"></i>
-          <h3>Certified results.</h3>
+          <h3 class="feature-title">Certified results.</h3>
           <p class="feature-description">Lorem ipsum dolor sit amet, consectetur.</p>
 
         </div>
@@ -109,14 +109,14 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="container-fluid">
-            <h2 class="testimony"> "MAtSci changed the way our company works around corrosion integrity"</h2>
+            <h2 class="testimonial-text"> "MAtSci changed the way our company works around corrosion integrity"</h2>
             <img class="testimonial-image" src="images/avatar.png" alt="avatar-image">
             <em>Rozzen, 2020</em>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container-fluid">
-            <h2 class="testimony"> "We never did pipe welding so fast! It's truly an amazing App!"</h2>
+            <h2 class="testimonial-text"> "We never did pipe welding so fast! It's truly an amazing App!"</h2>
             <img class="testimonial-image" src="images/avatar.png" alt="avatar-image">
             <em>TEIC, 2019</em>
           </div>
@@ -146,17 +146,17 @@
 
 
   <section id="pricing">
-    <h2>Different situations need different solutions</h2>
+    <h2 class="pricing-heading">Different situations need different solutions</h2>
     <p>Choose your pricing plan.</p>
     <div class="row">
 
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Personal</h3>
+            <h3 class="pricing-title">Personal</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="pricing-heading">Free</h2>
             <p>aliquam faucibus</p>
             <p>justo laoreet</p>
             <p>accumsan in</p>
@@ -167,10 +167,10 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Premium</h3>
+            <h3 class="pricing-title">Premium</h3>
           </div>
           <div class="card-body">
-            <h2>$50 /mo</h2>
+            <h2 class="pricing-heading">$50 /mo</h2>
             <p>aliquam faucibus</p>
             <p>justo laoreet</p>
             <p>accumsan in</p>
@@ -181,10 +181,10 @@
       <div class="pricing-column col-lg-4">
         <div class="card">
           <div class="card-header">
-            <h3>Enterprise</h3>
+            <h3 class="pricing-title">Enterprise</h3>
           </div>
           <div class="card-body">
-            <h2>$200 /mo</h2>
+            <h2 class="pricing-heading">$200 /mo</h2>
             <p>aliquam faucibus</p>
             <p>justo laoreet</p>
             <p>accumsan in</p>
@@ -196,7 +196,7 @@
   </section>
 
   <section id="action-call">
-      <h2 class="call-to-action">Start your company's journey now!</h2>
+      <h1 class="big-heading">Start your company's journey now!</h1>
       <button type="button" class="btn btn-dark btn-bg download-button"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-light btn-bg download-button"><i class="fab fa-google-play"></i> Download</button>
   </section>
